@@ -90,37 +90,6 @@ fi
 AM_CONDITIONAL(WITH_SS, $ss_enabled)
 
 dnl **********************************************************
-dnl **** Look for Mark6 scatter/gather library            ****
-dnl **** also require vdifmark6sg.h, implying vdifio      ****
-dnl **** was compiled with mark6sg support.               ****
-dnl **** cause mark6 datastreams to be built if found     ****
-dnl **********************************************************
-mark6sg_enabled=true
-PKG_CHECK_EXISTS([mark6sg >= 1.1.6],
-	[ PKG_CHECK_MODULES(MARK6SG, mark6sg) ],
-	[ AC_MSG_NOTICE([Did not find mark6sg.pc in $PKG_CONFIG_PATH])
-	  mark6sg_enabled=false ])
-if test ${mark6sg_enabled} = true; then
-	CPPFLAGS="${CPPFLAGS} ${MARK6SG_CFLAGS}"
-	AC_CHECK_HEADERS([mark6sg/mark6_sg_vfs.h], [], [ mark6sg_enabled=false ])
-	AC_CHECK_HEADERS([vdifmark6sg.h], [], [ mark6sg_enabled=false ])
-fi
-if test ${mark6sg_enabled} = true; then
-	CPPFLAGS="${CPPFLAGS} ${MARK6SG_CFLAGS}"
-	CXXFLAGS="${CXXFLAGS} ${MARK6SG_CFLAGS}"
-else
-	MARK6SG_CFLAGS=""
-	MARK6SG_LIBS=""
-	echo ''
-	echo 'Mark6 support will be suppressed because one or more'
-	echo 'needed files was not found.  Mark6 support requires'
-	echo 'the mark6sg library to be installed _and_ the vdifio'
-	echo 'library to be installed with support for mark6sg.'
-	echo ''
-fi
-AM_CONDITIONAL(WITH_MARK6SG, $mark6sg_enabled)
-
-dnl **********************************************************
 dnl **** Find mark5access library                         ****
 dnl **********************************************************
 PKG_CHECK_MODULES(M5ACCESS, mark5access >= 1.5.3)
